# lvfs-plugin

./: .metainfo.xml  README.md  firehose.quirk  fu-firehose-device.c  fu-firehose-device.h  fu-firehose-protocol.h  fu-plugin-firehose.c  fu-plugin-quectel.c  fu-quectel-common.c  fu-quectel-common.h  fu-quectel-device.c  fu-quectel-device.h  fu-quectel-firmware.c  fu-quectel-firmware.h  fu-sahara-protocol.h  fwupd-deps.sh  meson.build  quectel.quirk
data/quectel/: rawprogram.xml
protocol/: firehose_proto.c  firehose_proto.h  sahara_proto.c  sahara_proto.h
